# AI-Context-OS

./: .cursorrules  .gitignore  .windsurfrules  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FEATURES-PENDIENTES.md  LICENSE  README.es.md  README.md  REVISION-TECNICA-ALINEACION-2026-03-29.md  _config.yaml  _index.yaml  claude.md  decoracion-md.md  feature_agente.md  package-lock.json  package.json  sim_test.js  vite.config.ts
.ai/: catalog.md  index.yaml
.github/workflows/: release.yml
02-daily/: daily-log.jsonl
06-skills/: _skill-instructions.md
07-tasks/: backlog.jsonl
docs/: README.md  algorithms-and-scoring.md  architecture-and-operating-model.md  chat-context-pipeline-architecture.md  current-state-and-roadmap.md  editor-live-preview-guardrails.md  landing-keys.md  paper.md  sistema-autonomo-de-mantenimiento-ia.md  themes.md  whitepaper.md
docs/Memm wiki/: ARQUITECTURA-ACTUAL-ROUTER-CONTEXTO-Y-MEMORIAS.md  folder-contracts.md
docs/roadmap/: FEATURES-PENDIENTES.md  corpus-learned-scoring_med.md  feature_agente.md  fix-memory-cache-appstate.md  inbox-redesign-2026-04-24.md  karpathy-llm-wiki.md  plan-implementacion-separacion-l1-l2-sin-mcp.md
docs/superpowers/plans/: 2026-04-05-inbox-sources-ingestion.md  2026-04-09-i18n.md
docs/superpowers/specs/: 2026-04-09-i18n-design.md
documentation/: current-state-and-roadmap.md
roadmap/: 01-knowledge-base-architecture.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  config.rs  filesystem.rs  governance.rs  graph.rs  inbox.rs  journal.rs  memory.rs  mod.rs  observability.rs  onboarding.rs  router.rs  scoring.rs  vault.rs
src-tauri/src/core/: compat.rs  engine.rs  frontmatter.rs  governance.rs  graph.rs  health.rs  index.rs  journal.rs  mcp.rs  mcp_http.rs  mod.rs  observability.rs  optimizer.rs  paths.rs  router.rs  scoring.rs  search.rs  tasks.rs  types.rs  usage.rs  watcher.rs  wikilinks.rs
src-tauri/tests/: diagnose_vault_query.rs
src/components/chat/: ChatPanel.tsx
src/components/editor/: FormatToolbar.tsx  FrontmatterForm.tsx  (+9 more)
src/hooks/: useFileWatcher.ts
src/i18n/: index.ts  types.d.ts
src/lib/: settingsMigration.ts  settingsStore.ts  store.test.ts  store.ts  tauri.ts  themeLoader.ts  types.ts  useGovernanceBadge.ts  vaultStore.ts
src/styles/: global.css
src/views/: ConnectorsView.tsx  ExplorerView.tsx  GovernanceView.tsx  GraphViewPage.tsx  InboxView.tsx  JournalView.tsx  ObservabilityView.tsx  SettingsView.tsx  SimulationView.tsx  TaskView.tsx
tests/: editorCommands.test.ts  editorLivePreview.test.ts  editorMouseSelectingField.test.ts  editorMouseSelection.test.ts  editorPreviewState.test.ts  settingsStore.test.ts
(+17 files in other folders)
