[package]
name = "ai-context-os"
version = "0.1.24-beta"
edition = "2021"
default-run = "ai-context-os"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Markdown parsing
pulldown-cmark = "0.12"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# In-memory graph
petgraph = "0.7"

# Regex for search
regex = "1"

# Multilingual stemming (Snowball: English + Spanish)
rust-stemmers = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Home directory
dirs = "6"

# Zip backup/restore
zip = "2"

# Lazy statics
once_cell = "1"

# Error handling
thiserror = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# JSON Schema (needed by rmcp tool params)
schemars = "1"

# MCP protocol
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server", "tower"] }

# SQLite (observability database)
rusqlite = { version = "0.39", features = ["bundled"] }

# HTTP server for MCP SSE transport
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "ai-context-cli"
path = "src/cli.rs"
